*** HYBRID CHANGELOG
*** Newest entries at top

version hybrid-6-b80
* fixed "cannot join" numerics to display full error messages
* fixed ERR_BANLISTFULL to include channel name and banid
* reject non-RFC channel names from clients and servers instead
  of truncating (new numeric 479 coordinated with the other major nets)
-Rodder

version hybrid-6-b79
* fixed compile problems if SPLIT_PONG was undefined
* more cleanup
* moved TIMED_K's to broken section of conf
-Rodder

version hybrid-6-b78   2-Jun-1999
* renamed mycmp() to irccmp() and myncmp() to ircncmp()
-Rodder

version hybrid-6-b77   2-Jun-1999
* more minor cleanup
-Rodder
* duh. just realized that hostip is now obsolete because of the way
  IP klines are being done. removing it saves 15 bytes per local client.
-Dianora
	
version hybrid-6-b76   28-May-1999
* make sure mtrie returned aconf is a CONF_KILL in s_serv.c
* take care of ~*@some.host.at.tld case
-Dianora
	
version hybrid-6-b75   26-May-1999
* '*' is not a legal IP. corrected is_address code.
* corrected possible buffer overflows in m_knock, m_invite
* server auto sets +nt on new channels.
* was never setting ip/ip_mask on m_kline ip klines, so
  ip /quote kline klines needed rehash to take effect.
-Dianora
	
version hybrid-6-b74   19-May-1999
* backed out incorrect change in dline_conf.c
* Corrected sendto_ops in send.c that was recursive in sendq errors,
  this one could have restarted server in infinite loop. (Raistlin Mejere)
* Using variant of soleil's is_address() code
* Fixed handling of kline/dline in s_serv.c s_bsd.c s_conf.c 
-Dianora
	
version hybrid-6-b73   15-May-1999
* attempt to workaround 64bit Solaris gcc-2.8.1 bug
* more compile cleanup for obscure config options
-Rodder

version hybrid-6-b72   15-May-1999
* don't allow SJOIN to & local channels.	
* restored hybrid-5 m_names code	
* Fixed send.c to be rfc compliant. 
* kick of client who joined through a ban due to a +e, has +e removed by server